--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,14 @@ h2+p {
 }
 
 
+/* Footer */
+
+footer {
+  width: 100%;
+  height: 40px;
+}
+
+
 /* Media queries */
 
 @media screen and (max-width: 767px) {
